# mcp-databend

./: .gitignore  README.md  databend_env.py  pyproject.toml  server.py
.github/workflows/: python-publish.yml
mcp_databend/: env.py  server.py
