[project]
name = "mcp-server-databend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databend-driver>=0.27.3",
    "mcp>=1.9.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.9.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py312"
lint.select = ["E", "F", "I", "N", "Q", "T", "W"]
lint.ignore = []
